added a table of unix information

--- a/cheat-sheet.html
+++ b/cheat-sheet.html
@@ -9,8 +9,20 @@
         <p>Honestly I don't know how we got this far!</p>
         <p>...But we did...</p>
         <h2>Unix Commands</h2>
-        
+        <table>
+            <tr>
+                <td>ls</td>
+                <td>&lt;directory&gt;</td>
+            </tr>
+            <tr>
+                <td>cd</td>
+                <td>&lt;directory&gt;</td>
+            </tr>
+            <tr colspan="2">
+                <td>pwd</td>
+            </tr>
+        </table>
         <h2>Git Commands</h2>
-        
+        <a href="https://github.com/Grunzila" target="_blank">A link to my github</a>
     </body>
 </html>
