added image and improved information

--- a/cheat-sheet.html
+++ b/cheat-sheet.html
@@ -6,23 +6,36 @@
     </head>
     <body>
         <h1>Unix Cheat Sheet</h1>
-        <p>Honestly I don't know how we got this far!</p>
-        <p>...But we did...</p>
+        <p>...Because you must be desperate if you're looking for help here.</p>
         <h2>Unix Commands</h2>
+        <p>These are for navigating and managing in the console.</p>
         <table>
+            <th colspan="3">useful commands here</th>
             <tr>
                 <td>ls</td>
+                <td>&lt;flags&gt;</td>
                 <td>&lt;directory&gt;</td>
             </tr>
             <tr>
                 <td>cd</td>
+                <td>&lt;flags&gt;</td>
                 <td>&lt;directory&gt;</td>
             </tr>
-            <tr colspan="2">
+            <tr colspan="3">
                 <td>pwd</td>
+            </tr>
+            <tr>
+                <td>man</td>
+                <td colspan="2">&lt;command&gt;</td>
             </tr>
         </table>
         <h2>Git Commands</h2>
-        <a href="https://github.com/Grunzila" target="_blank">A link to my github</a>
+        <p>"Because you are not always right the first time!" - Erik Falor</p>
+        <img src="images/the_devil.jpg" class="flr" alt="the devil was here" height="162" width="91">
+        <p>
+            For those who desire more here is a
+            <a href="https://github.com/Grunzila" target="_blank">link to my github</a>.
+        </p>
+        
     </body>
 </html>
