added more tables and added monospace font

--- a/cheat-sheet.html
+++ b/cheat-sheet.html
@@ -3,12 +3,18 @@
     <head>
         <title>Unix Cheat Sheet</title>
         <meta charset="utf-8">
+        <style type="text/css">
+            table {font-family:"Courier New", Courier, monospace;}
+        </style>
     </head>
     <body>
         <h1>Unix Cheat Sheet</h1>
         <p>...Because you must be desperate if you're looking for help here.</p>
         <h2>Unix Commands</h2>
-        <p>These are for navigating and managing in the console.</p>
+        <dl>
+            <dt>"We got some serious shit done today!"</dt>
+            <dd>- Thom Toolson</dd>
+        </dl>
         <table>
             <th colspan="3">useful commands here</th>
             <tr>
@@ -29,8 +35,58 @@
                 <td colspan="2">&lt;command&gt;</td>
             </tr>
         </table>
+        
         <h2>Git Commands</h2>
-        <p>"Because you are not always right the first time!" - Erik Falor</p>
+        <dl>
+            <dt>"Because you are not always right the first time!"</dt>
+            <dd>- Erik Falor</dd>
+        </dl>
+        <table>
+            <th colspan="3">useful gits here</th>
+            <tr>
+                <td>git</td>
+                <td>init</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>status</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>add</td>
+                <td>&lt;filename&gt;</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>commit</td>
+                <td>[-m]</td>
+                <td>&lt;"message"&gt;</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>log</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>checkout</td>
+                <td>&lt;commitID&gt;</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>branch</td>
+                <td>[-a]</td>
+                <td>&lt;branch name&gt;</td>
+            </tr>
+            <tr>
+                <td>git</td>
+                <td>merge</td>
+                <td>&lt;commitID&gt;</td>
+            </tr>
+        </table>
+        <br>
+        <br>
+        <br>
+        <br>
         <img src="images/the_devil.jpg" class="flr" alt="the devil was here" height="162" width="91">
         <p>
             For those who desire more here is a
