--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
     <head>
         <title>Unix Cheat Sheet</title>
         <meta charset="utf-8">
-        <style type="text/css">
-            table {font-family:"Courier New", Courier, monospace;}
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Unix Cheat Sheet</h1>
