changed photo at bottom

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </table>
         <br>
         <br>
-        <img src="images/the_devil.jpg" class="flr" alt="the devil was here" height="162" width="91">
+        <img src="images/Face 3.png" class="flr" alt="the devil was here">
         <p>
             For those who desire more here is a
             <a href="https://github.com/Grunzila" target="_blank">link to my github</a>.
