Prototype drop menu add, github link edited.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="drop-menu">
+            <ul class="menu-icon">
+                <li>
+                    item
+                    <ul>
+                        <li>
+                            Jiminy Cricket
+                            <ul>
+                                <li>
+                                    Cary Grant
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Flynn Rider
+                        </li>
+                        <li>
+                            John Wayne
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         <h1>Unix Cheat Sheet</h1>
         <p>...Because you must be desperate if you're looking for help here.</p>
         <h2>Unix Commands</h2>
@@ -83,11 +106,10 @@
         </table>
         <br>
         <br>
-        <img src="images/Face 3.png" class="flr" alt="the devil was here">
         <p>
-            For those who desire more here is a
-            <a href="https://github.com/Grunzila" target="_blank">link to my github</a>.
+            For those who desire more
+            <a href="https://github.com/Grunzila" target="_blank"><img src="images/Face 3.png" class="flr" alt="the devil was here"></a>
+            here is a link to my GitHub.
         </p>
-        
     </body>
 </html>
