cleaned up table appearance and syntax

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <dd>- Thom Toolson</dd>
         </dl>
         <table>
-            <th colspan="3">useful commands here</th>
+            <tr>
+                <th>commands</th>
+            </tr>
             <tr>
                 <td>ls</td>
                 <td>&lt;flags&gt;</td>
@@ -48,12 +50,12 @@
                 <td>&lt;flags&gt;</td>
                 <td>&lt;directory&gt;</td>
             </tr>
-            <tr colspan="3">
+            <tr>
                 <td>pwd</td>
             </tr>
             <tr>
                 <td>man</td>
-                <td colspan="2">&lt;command&gt;</td>
+                <td>&lt;command&gt;</td>
             </tr>
         </table>
         
@@ -63,7 +65,9 @@
             <dd>- Erik Falor</dd>
         </dl>
         <table>
-            <th colspan="3">useful gits here</th>
+            <tr>
+                <th>useful gits</th>
+            </tr>
             <tr>
                 <td>git</td>
                 <td>init</td>
