cleaned up the table syntax some more

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
             <dt>"We got some serious shit done today!"</dt>
             <dd>- Thom Toolson</dd>
         </dl>
-        <table>
+        <table colspan="3">
             <tr>
                 <th>commands</th>
+                <th></th>
+                <th></th>
             </tr>
             <tr>
                 <td>ls</td>
@@ -52,10 +54,13 @@
             </tr>
             <tr>
                 <td>pwd</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>man</td>
                 <td>&lt;command&gt;</td>
+                <td></td>
             </tr>
         </table>
         
@@ -67,19 +72,27 @@
         <table>
             <tr>
                 <th>useful gits</th>
+                <th></th>
+                <th></th>
+                <th></th>
             </tr>
             <tr>
                 <td>git</td>
                 <td>init</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>git</td>
                 <td>status</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>git</td>
                 <td>add</td>
                 <td>&lt;filename&gt;</td>
+                <td></td>
             </tr>
             <tr>
                 <td>git</td>
@@ -90,11 +103,14 @@
             <tr>
                 <td>git</td>
                 <td>log</td>
+                <td></td>
+                <td></td>
             </tr>
             <tr>
                 <td>git</td>
                 <td>checkout</td>
                 <td>&lt;commitID&gt;</td>
+                <td></td>
             </tr>
             <tr>
                 <td>git</td>
@@ -106,6 +122,7 @@
                 <td>git</td>
                 <td>merge</td>
                 <td>&lt;commitID&gt;</td>
+                <td></td>
             </tr>
         </table>
         <br>
