fixed tables and added highlighting

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
                     item
                     <ul>
                         <li>
-                            Jiminy Cricket
+                            <a href="https://github.com/Grunzila" target="_blank">link1</a>
                             <ul>
                                 <li>
-                                    Cary Grant
+                                    <a href="https://www.google.com/search-me-a-thing" target="_blank">link2</a>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            Flynn Rider
+                            <a href="https://github.com/Grunzila" target="_blank">link3</a>
                         </li>
                         <li>
-                            John Wayne
+                            <a href="https://github.com/Grunzila" target="_blank">link4</a>
                         </li>
                     </ul>
                 </li>
@@ -36,7 +36,7 @@
             <dt>"We got some serious shit done today!"</dt>
             <dd>- Thom Toolson</dd>
         </dl>
-        <table colspan="3">
+        <table>
             <tr>
                 <th>commands</th>
                 <th></th>
